# Portfolio

./: .gitignore  FinanceDataAnalytics_DAG.py  README.md  docker-compose.sandbox.yml  docker-compose.yml  render.yaml  requirements.txt
AI_CleanSQL/: .gitignore  README.md
AgenticAI_AutoBot/: .gitignore  README.md
AgenticAI_AutoBot/autobot_vscode/: observability_setup.md
AgenticAI_AutoBot/docs/: autobot_v9.md
AgenticAI_AutoBot/graphrag/: docker-compose.yml  ingest_graph_actual.py
AgenticAI_AutoBot/observability/: promtail-config.yaml
AgenticAI_AutoBot/slackbot/: Dockerfile  config.py  (+5 more)
Data_Driven_Analysis/: README.md
Distributed_EventDriven_Platform/: README.md
Finance_Data_Analytics/: FinanceDataAnalytics_ETL.py  FinanceDataAnalytics_ETL_Pair9.py  FinanceDataAnalytics_Prediction.py  FinanceDataAnalytics_Prediction_Pair9.py  Forecast_Queries.sql  README.md
MERN - UberEats Foundation/: README.md
MERN_UberEats_Clone/: README.md
Product_UX/: README.md
SARI_Project-master/: README.md
autobot_vscode/: README.md
docs/: autobot_langgraph_architecture.md
graphrag/: README.md
next_steps/: observatory_and_analytics.md
observability/: prometheus.yml
sandbox/: Dockerfile.persistent
slackbot/: .dockerignore  Dockerfile  README.md  adhoc.py  config.py  deployment.md  generate_demo_sets.py  notifier.py  poller.py  pyproject.toml  reasoner.py  requirements.txt  seen_issues.db  sentinel.py  slack_orchestrator.py  telemetry.md
slackbot/rlhf/: __init__.py  dpo_train_job.py  feedback_store.py  labeler.py  rlhf_orchestrator.py  runpod_trainer.py
(+404 files in other folders)
