[project]
name = "slackbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "langchain>=1.2.10",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.13",
    "langchain-openai>=1.1.10",
    "langgraph>=1.0.8",
    "python-dotenv>=1.2.1",
    "slack-sdk>=3.26.0",
    "requests>=2.32.5",
    "openai>=1.12.0",
]
